yoshimi 1.5.9 M

2018-11-7 Will
* Added missing controls to CLI voice modulator.
* Simplified CLI voice modulator type setting.
* Revised CLI common controls.
  Detune types now names, not numbers.
* BugFix: limits test not seeing AddSynth Modulator.

2018-11-4 Will
* Completed all CLI waveform controls.
 I think!
* Adjustments to CLI minimum abbreviations.

2018-11-3 Will
* Added CLI waveform access for modulators.

2018-11-2 Will
* Completed CLI AddVoice controls :)

2018-11-1 Will
* Enabled formal CLI access to AddVoice Modulator.
  Envelope inserts and common controls not done.

2018-10-31 Will
* Fixed regression - disappearing waveform Mag Type.
* Removed Harmonic Shift Reset.
  It's function is performed by a right click on the
  Harmonic Shift up or down button.
* Implemented CLI voice unison controls.
* Implemented CLI remaining voice controls.
  Not modulator ones.

2018-10-30 Will
* CMakeLists.txt improvement from Hermann.
* GUI waveform deactivation adjustments:
  harmonic randomness.
  waveshape.
  spectrum adjust.
  filter.
  modulation.
  adaptive harmonics.
  base type parameter.
  base modulation parameters.
* Further adjustments to GUI waveform deactivation.

2018-10-28 Will
* PadSynth GUI 'apply' button updates when exporting.
* Added 'wait' command to CLI scripts.
* Added read/write part kit item name to CLI.
* Properly resolved PadSynth segfault.
  Due to invalid error check!
* Minor adjustments to CLI PadSynth text.
* Added ID for context level for AddSynth Voice Modulator.

2018-10-27 Will
* BugFix: GUI segfault exporting padsyth samples.
  Only on kit items > 0 and fix is temporary hack :(

2018-10-26 Will
* Implemented CLI PadSynth Controls.

2018-10-25 Will
* Found missing PadSynth overtones option.
* Deactivate PadSynth overtones if set as harmonic.
* Small revision to PadSynth GUI.
* Deactivate SubSynth overtones if set as harmonic.

2018-10-24 Will
* Deactivate PadSynth amp group if Multiplier off.

2018-10-23 Will