@@ -1,5 +1,9 @@
 yoshimi 1.5.9 M
 
+2018-11-8 Will
+* Further revision to CLI AddVoice controls.
+* BugFix: CLI waveform change only setting voice 1.
+
 2018-11-7 Will
 * Added missing controls to CLI voice modulator.
 * Simplified CLI voice modulator type setting.
